--- a/debugger/frames/debugger_class_options.lfm
+++ b/debugger/frames/debugger_class_options.lfm
@@ -5,6 +5,7 @@ object DebuggerClassOptionsFrame: TDebuggerClassOptionsFrame
   Width = 532
   ClientHeight = 434
   ClientWidth = 532
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   Visible = False
   DesignLeft = 613
