--- a/components/anchordocking/design/anchorbackuptool.lfm
+++ b/components/anchordocking/design/anchorbackuptool.lfm
@@ -1,28 +1,28 @@
 object DockBackupFrm: TDockBackupFrm
   Left = 0
-  Height = 493
+  Height = 531
   Top = 0
   Width = 693
   Caption = 'Backup'
-  ClientHeight = 493
+  ClientHeight = 531
   ClientWidth = 693
   Position = poScreenCenter
   LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   object Panel2: TPanel
     Left = 0
-    Height = 493
+    Height = 531
     Top = 0
     Width = 693
     Align = alClient
     BevelOuter = bvNone
-    ClientHeight = 493
+    ClientHeight = 531
     ClientWidth = 693
     TabOrder = 0
     object Panel4: TPanel
       Left = 0
       Height = 33
-      Top = 460
+      Top = 498
       Width = 693
       Align = alBottom
       ClientHeight = 33
@@ -40,26 +40,23 @@ object DockBackupFrm: TDockBackupFrm
     end
     object Splitter1: TSplitter
       Left = 260
-      Height = 460
+      Height = 498
       Top = 0
       Width = 5
     end
     object Panel3: TPanel
       Left = 0
-      Height = 460
+      Height = 498
       Top = 0
       Width = 260
       Align = alLeft
       BevelOuter = bvNone
-      ClientHeight = 460
+      ClientHeight = 498
       ClientWidth = 260
       TabOrder = 2
       object ListBox1: TListBox
-        AnchorSideLeft.Control = Panel3
-        AnchorSideTop.Control = btnBackup
-        AnchorSideBottom.Control = btnRestore
         Left = 5
-        Height = 283
+        Height = 248
         Top = 60
         Width = 255
         Align = alClient
@@ -77,12 +74,12 @@ object DockBackupFrm: TDockBackupFrm
         AnchorSideTop.Side = asrBottom
         Left = 5
         Height = 50
-        Top = 348
+        Top = 313
         Width = 255
         Align = alBottom
         Anchors = [akLeft, akRight]
         BorderSpacing.Left = 5
-        BorderSpacing.Bottom = 6
+        BorderSpacing.Bottom = 5
         Caption = 'Restore selected layout'
         TabOrder = 1
         OnClick = btnRestoreClick
@@ -102,21 +99,38 @@ object DockBackupFrm: TDockBackupFrm
         TabOrder = 2
         OnClick = btnBackupClick
       end
-      object btnRestoreDefault: TBitBtn
+      object btnDefault: TBitBtn
         AnchorSideLeft.Control = Panel3
         AnchorSideTop.Control = ListBox1
         AnchorSideTop.Side = asrBottom
         Left = 5
         Height = 50
-        Top = 404
+        Top = 442
+        Width = 255
+        Align = alBottom
+        Anchors = [akLeft, akRight]
+        BorderSpacing.Left = 5
+        BorderSpacing.Top = 24
+        BorderSpacing.Bottom = 6
+        Caption = 'Restore default layout'
+        TabOrder = 3
+        OnClick = btnDefaultClick
+      end
+      object btnDelete: TBitBtn
+        AnchorSideLeft.Control = Panel3
+        AnchorSideTop.Control = ListBox1
+        AnchorSideTop.Side = asrBottom
+        Left = 5
+        Height = 50
+        Top = 368
         Width = 255
         Align = alBottom
         Anchors = [akLeft, akRight]
         BorderSpacing.Left = 5
         BorderSpacing.Bottom = 6
-        Caption = 'Restore default layout'
-        TabOrder = 3
-        OnClick = btnRestoreDefaultClick
+        Caption = 'Delete selected layout'
+        TabOrder = 4
+        OnClick = btnDeleteClick
       end
     end
     object Memo1: TMemo
@@ -125,7 +139,7 @@ object DockBackupFrm: TDockBackupFrm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = Panel4
       Left = 265
-      Height = 448
+      Height = 486
       Top = 5
       Width = 423
       Align = alClient
